# Hermes-Ops-Mini-Toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
src/hermes_ops_mini_toolkit/: __init__.py  cli.py
tests/: test_cli.py
